--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "My-Food-Project"
+    "url": "My-Project"
   },
   "author": "",
   "license": "ISC"
