--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,13 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "build":"echo success",
+    "dev": "nodemon server.js",
+    "dev2": "nodemon server2.js"
   },
   "repository": {
     "type": "git",
@@ -16,6 +20,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-jwt": "^8.3.0",
