--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -13,15 +13,18 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "aos"
+
+            ],
             "outputPath": "dist/frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
-            "allowedCommonJsDependencies": [
-              "lodash"
-           ],
+
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
